--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -6,7 +6,7 @@
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <RootNamespace></RootNamespace>
-    <ProjectGuid>{82C4C334-3AC2-7160-6B7D-163E11D7E3F0}</ProjectGuid>
+    <ProjectGuid>{9ECB67B7-8368-C4C4-4868-CE8979B34F69}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <AssemblyName>Assembly-CSharp</AssemblyName>
@@ -114,7 +114,7 @@
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/Networking/UnityEngine.Networking.dll</HintPath>
  </Reference>
  <Reference Include="Google.ProtocolBuffers">
- <HintPath>/Users/Joshua/toMac/DeepInc/@Unity LC SDK/gvr-unity-sdk-master1.0.0/Samples/CastleDefense/Assets/Plugins/Google.ProtocolBuffers.dll</HintPath>
+ <HintPath>/Users/Joshua/toMac/DeepInc/@repo/CastleDefenseUnityTest/Assets/Plugins/Google.ProtocolBuffers.dll</HintPath>
  </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
